--- a/properties/db.properties
+++ b/properties/db.properties
@@ -1,6 +1,6 @@
 dataSource.driverClassName=com.mysql.jdbc.Driver
-dataSource.password=Test1234
-dataSource.username=frescoUser
+dataSource.password=yourpassowrd
+dataSource.username=fresco
 dataSource.url=jdbc:mysql://localhost:3306/fresco
 dataSource.maxActive=100
 dataSource.maxIdle=100
